--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.7",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
@@ -41,7 +42,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write \"**/src/*.tsx\"",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "eslintConfig": {
     "extends": [
@@ -62,8 +63,8 @@
     ]
   },
   "lint-staged": {
-    "src/*.tsx": [
-      "yarn format"
+    "src/**/*.{tsx,ts}": [
+      "npm run format"
     ]
   }
 }
